--- a/style.css
+++ b/style.css
@@ -5,20 +5,22 @@ height: 500px;
 width: 100px;
 }
 .car{
-        top: -100px;
+
+top: -100px;
 position: absolute;
 height:50px;
 width:30px;
-margin: 10px;
+margin-left: 35px;
 background: red;
 
 }
 .car2{
+
 top: 450px;
 position: absolute;
 height:50px;
 width:30px;
-margin: 10px;
+margin-left: 35px;
 background: red;
 
 }
